# audio-feature-extraction

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.env  devcontainer.json
.kiro/specs/audio-feature-extraction/: design.md  requirements.md  spec.json  tasks.md  validation-design-v1.3.md  validation-design.md
.kiro/steering/: product.md  structure.md  tech.md
src/dataset_generator/: __init__.py
src/dataset_generator/cli/: main.py
src/dataset_generator/core/: __init__.py  conversions.py  models.py  types.py
src/dataset_generator/features/: __init__.py  stft.py
src/dataset_generator/io/: __init__.py  audio_loader.py
src/dataset_generator/pipeline/: __init__.py
src/dataset_generator/transforms/: __init__.py  inverse.py
tests/: conftest.py  test_package.py
tests/core/: test_conversions.py  test_models.py  test_types.py
tests/features/: test_stft.py
tests/io/: test_audio_loader.py
tests/transforms/: test_inverse.py
